--- a/Styles.css
+++ b/Styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background-color: #DE8A60;
+    background-color: #FFFFFF
     color: #FFFFFF;
     #company-logo {
     display: block;
