--- a/Styles.css
+++ b/Styles.css
@@ -34,6 +34,7 @@ section {
     border-radius: 5px;
     background-color: #EBE6C9;
     transition: background-color 0.3s;
+     text-align: center;
 }
 
 .header-button:hover {
