--- a/Styles.css
+++ b/Styles.css
@@ -4,20 +4,18 @@ body {
     color: #5A5A5C;
 }
 
-header {
-    background-color: #FFFFFF
-    color: #FFFFFF;
-    #company-logo {
+.header-content {
+    text-align: center;
+    background-color: #DE8A60;
+    padding: 10px 0;
+}
+
+#company-logo {
     display: block;
     margin: 0 auto;
     text-align: center;
 }
 
-
-section {
-    background-color: #EEC4C3;
-    color: #5A5A5C;
-}
 .button-container {
     background-color: #DE8A60;
     text-align: center;
@@ -34,12 +32,9 @@ section {
     border-radius: 5px;
     background-color: #EBE6C9;
     transition: background-color 0.3s;
-     text-align: center;
 }
 
 .header-button:hover {
     background-color: #EEC4C3;
 }
-
-/* Add more specific styling for other elements and sections as needed */
 
