--- a/Styles.css
+++ b/Styles.css
@@ -118,7 +118,7 @@ section {
 
 .orange-bar {
     height: 4px;
-    background-color: #DE8A60;
+    background-color: #EBE6C9;
 }
 
 /* Add more styles for your website content as needed */
