--- a/Styles.css
+++ b/Styles.css
@@ -1,125 +1,51 @@
-/* Reset default margin and padding for all elements */
-* {
+/* Reset some default styles for better consistency */
+body, h1, h2, p, ul, li {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
-/* Set font family and background color for the entire page */
 body {
     font-family: 'Arial Rounded MT Bold', sans-serif;
     background-color: #EBE6C9;
     color: #5A5A5C;
 }
 
-/* Header styles */
 header {
-    background-color: #EBE6C9;
+    background-color: #DE8A60;
+    color: #fff;
     padding: 10px 0;
+}
+
+.logo-container {
+    text-align: center;
+}
+
+#company-logo {
+    width: 150px; /* Adjust the size as needed */
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 
 .header-content {
     text-align: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-#company-logo {
-    display: block;
-    margin: 0 auto;
 }
 
 nav ul {
     list-style: none;
-    display: flex;
-    margin-top: 20px;
 }
 
 nav li {
-    margin: 0 15px;
-    position: relative; /* Add relative positioning to the list items */
-
-}
-
-/* Navigation menu styles */
-nav a {
-    color: #FFFFFF;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #EBE6C9;
-    transition: background-color 0.3s;
-}
-
-/* Add a background color to the active link */
-nav a.active {
-    background-color: #DE8A60; /* Orange color */
-}
-
-nav a:hover {
-    background-color: #EEC4C3;
-}
-
-/* Section styles */
-section {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 40px 0;
-    text-align: center;
-}
-
-/* Button container styles */
-.button-container {
-    background-color: #DE8A60;
-    text-align: center;
-    padding: 10px 0;
+    display: inline;
+    margin: 0 20px;
 }
 
 .header-button {
-    color: #FFFFFF;
     text-decoration: none;
-    font-size: 18px;
-    padding: 10px 20px;
-    margin: 0 10px;
-    border-radius: 5px;
-    background-color: #EBE6C9;
-    transition: background-color 0.3s;
+    color: #fff;
 }
 
-.header-button:hover {
-    background-color: #EEC4C3;
-}
+/* Add more CSS styles as needed */
 
-/* Flavors menu container styles */
-.menu-container {
-    background-color: #DE8A60;
-    padding: 20px;
-}
-/* Your existing CSS styles here */
-
-/* Logo container styles */
-.logo-container {
-    background-color: #DE8A60;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-#company-logo {
-    display: block;
-    margin: 0 auto;
-}
-
-.orange-bar {
-    height: 4px;
-    background-color: #EBE6C9;
-}
-
-/* Add more styles for your website content as needed */
+/* Define styles for other sections and elements */
 
